--- a/AppFoody/app/src/main/res/values/colors.xml
+++ b/AppFoody/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
     <color name="colorBackgroundTrangChu">#CCC</color>
+    <color name="transparentBackgroudLogin">#66000000</color>
+    <color name="colorFacebook">#189ACA</color>
 </resources>
