--- a/AppFoody/app/src/main/res/layout/custom_layout_recyclerview_odau.xml
+++ b/AppFoody/app/src/main/res/layout/custom_layout_recyclerview_odau.xml
@@ -71,12 +71,14 @@
             android:padding="5dp"/>
 
         <LinearLayout
+            android:id="@+id/containerBinhLuan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="5dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/circleImgUser"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_margin="5dp"
@@ -91,6 +93,7 @@
                 android:layout_weight="1">
 
                 <TextView
+                    android:id="@+id/txtTieuDeBinhLuan"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Gogi House"
@@ -98,24 +101,28 @@
                     android:textSize="18sp"/>
 
                 <TextView
+                    android:id="@+id/txtNoiDungBinhLuan"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="36 Triệu Quang Phục Quận 3"/>
             </LinearLayout>
 
             <TextView
+                android:id="@+id/txtChamDiemBinhLuan"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="6.0"/>
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/containerBinhLuan2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="5dp">
 
             <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/circleImgUser2"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_margin="5dp"
@@ -130,6 +137,7 @@
                 android:layout_weight="1">
 
                 <TextView
+                    android:id="@+id/txtTieuDeBinhLuan2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Gogi House"
@@ -137,12 +145,14 @@
                     android:textSize="18sp"/>
 
                 <TextView
+                    android:id="@+id/txtNoiDungBinhLuan2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="36 Triệu Quang Phục Quận 3"/>
             </LinearLayout>
 
             <TextView
+                android:id="@+id/txtChamDiemBinhLuan2"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="7.0"/>
@@ -155,9 +165,10 @@
             android:layout_marginLeft="50dp">
 
             <TextView
+                android:id="@+id/txtTongBinhLuan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="123"
+                android:text="0"
                 android:gravity="center"
                 android:drawableLeft="@drawable/ic_insert_comment_black_24dp"
                 android:drawablePadding="5dp"
@@ -165,9 +176,10 @@
                 android:layout_margin="5dp"/>
 
             <TextView
+                android:id="@+id/txtTongAnhBinhLuan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="123"
+                android:text="0"
                 android:layout_gravity="center"
                 android:drawableLeft="@drawable/ic_photo_camera_black_24dp"
                 android:drawablePadding="5dp"
