--- a/AppFoody/app/src/main/res/layout/custom_layout_recyclerview_odau.xml
+++ b/AppFoody/app/src/main/res/layout/custom_layout_recyclerview_odau.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp">
+    android:layout_marginTop="10dp"
+    android:id="@+id/cardViewOdau">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,9 +18,10 @@
             android:padding="5dp">
 
             <TextView
+                android:id="@+id/txtDiemTrungBinhQuanAn"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:text="6.8"
+                android:text="0"
                 android:layout_margin="5dp"
                 android:gravity="center"
                 android:background="@drawable/custom_background_circle"/>
@@ -40,12 +42,14 @@
                     android:textSize="18dp"/>
 
                 <TextView
+                    android:id="@+id/txtDiaChiQuanAnOdau"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="36 Triệu Quang Phục Quận 3"/>
             </LinearLayout>
 
             <TextView
+                android:id="@+id/txtKhoangCachQuanAn"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="6.6 km"/>
