--- a/AppFoody/app/src/main/res/layout/layout_splashscreen.xml
+++ b/AppFoody/app/src/main/res/layout/layout_splashscreen.xml
@@ -1,26 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#cd2027">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        app:srcCompat="@drawable/foodytext"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="198dp"/>
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/txtPhienban"
-        android:textColor="@android:color/background_light"
-        android:text="TextView"
-        android:layout_below="@+id/imageView"/>
+        android:layout_width="300dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="198dp"
+        android:gravity="center"
+        app:srcCompat="@drawable/foodytext" />
 
     <LinearLayout
         android:layout_width="105dp"
@@ -33,13 +25,14 @@
         android:clickable="false"
         android:clipChildren="false"
         android:clipToPadding="false"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyle"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_gravity="bottom"
             android:layout_weight="1"
             android:indeterminateTint="@android:color/background_light" />
@@ -52,6 +45,9 @@
             android:layout_weight="1"
             android:text="@string/dangtai"
             android:textColor="@android:color/background_light" />
+
+
     </LinearLayout>
+
 
 </RelativeLayout>
