Chỉnh sửa chi tiết quán ăn

--- a/AppFoody/app/src/main/res/layout/custom_layout_binhluan.xml
+++ b/AppFoody/app/src/main/res/layout/custom_layout_binhluan.xml
@@ -46,4 +46,8 @@
             android:layout_height="match_parent"
             android:text="6.0"/>
     </LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycleHinhBinhLuan"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
 </LinearLayout>
