--- a/AppFoody/app/src/main/res/layout/layout_trangchu.xml
+++ b/AppFoody/app/src/main/res/layout/layout_trangchu.xml
@@ -49,6 +49,7 @@
         </RadioGroup>
 
         <ImageView
+            android:id="@+id/imgThemQuanAn"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_gravity="right"
