--- a/AppFoody/app/src/main/res/values/colors.xml
+++ b/AppFoody/app/src/main/res/values/colors.xml
@@ -2,9 +2,10 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#B81010</color>
-    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorAccent">#CCC</color>
     <color name="colorBlack">#000000</color>
     <color name="colorBackgroundTrangChu">#CCC</color>
     <color name="transparentBackgroudLogin">#66000000</color>
     <color name="colorFacebook">#189ACA</color>
+    <color name="colorWhite">#FFF</color>
 </resources>
